# QZP-Governance

./: Anchor.toml  Cargo.toml  Desktop  README.md  cleanup_old_mints.sh  justfile  package-lock.json  package.json  qzl_mint.sh
client/: client.ts
programs/governance/: Cargo.toml
programs/governance/src/: instructions.rs  lib.rs
programs/qzl_token/: Cargo.toml
programs/qzl_token/src/: instructions.rs  lib.rs  utils.rs
programs/token/: Cargo.toml
programs/token/src/: instructions.rs  lib.rs
programs/vote-project/: Cargo.toml
programs/vote-project/src/: lib.rs
qzl-cli/: Cargo.toml
qzl-cli/src/: main.rs
tests/: anchor.ts  qzl_labs_tests.ts  token.ts  vote-project.ts
