[package]
name = "qzl_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qzl_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"
solana-program = "2.2.1"
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.9.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.1"
solana-security-txt = "1.1.1"
bytemuck = "1.7.0"
